--- a/oneContact/oneContact/Owner.plist
+++ b/oneContact/oneContact/Owner.plist
@@ -7,7 +7,7 @@
 	<key>surname</key>
 	<string>FABRE</string>
 	<key>name</key>
-	<string>Grégori</string>
+	<string>Gregori</string>
 	<key>entity</key>
 	<string>EP/SCR/TF-DIGITAL</string>
 </dict>
